--- a/deployment/server/package.json
+++ b/deployment/server/package.json
@@ -11,6 +11,7 @@
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
     "jade": "^0.29.0",
+    "jquery": "^3.6.4",
     "knex": "^2.4.2",
     "morgan": "~1.9.1",
     "sqlite3": "^5.1.6"
